fixed white space

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,14 +7,21 @@
   color: $text-color;
   scroll-behavior: smooth;
   min-width: 320px;
-
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  
   &:has(.page__menu:target) {
     overflow: hidden;
+
   }
 }
 
 .page__body {
   margin: 0;
+  width: 100%;
+  padding: 0;
+  
 }
 
 img {
@@ -27,6 +34,7 @@ img {
 footer {
   bottom: 0;
   width: 100%;
+  box-sizing: border-box;
 }
 
 /* $endregion GENERAL */
@@ -614,7 +622,8 @@ button {
   font-size: 16px;
   font-weight: 700;
   grid-column: 1 / -1;
-
+  
+  
   &:hover {
     background-color: $button-hover-color;
   }
